@@ -1,9 +1,7 @@
 package com.qwwuyu.server.utils;
 
 import com.qwwuyu.server.configs.SecretConfig;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-import sun.security.tools.keytool.CertAndKeyGen;
+import org.apache.commons.codec.binary.Base64;
 
 import javax.crypto.Cipher;
 import java.io.*;
@@ -15,7 +13,6 @@ import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
-import java.util.Base64;
 
 /**
  * RSA工具
@@ -45,15 +42,17 @@ public class RSAUtil {
 
     /** 解密 */
     public String decrypt(String base64Data) throws Exception {
-        return new String(decrypt(Base64.getDecoder().decode(base64Data)), StandardCharsets.UTF_8);
+        return new String(decrypt(java.util.Base64.getDecoder().decode(base64Data)), StandardCharsets.UTF_8);
     }
+
 
     /** 生成新的密匙 */
     public static RSAUtil genRSAKeyPair2(File privateKeyFile, File publicKeyFile) throws Exception {
-        CertAndKeyGen keyPair = new CertAndKeyGen("RSA", "SHA1WithRSA", null);
-        keyPair.generate(1024);
-        RSAPrivateKey privateKey = (RSAPrivateKey) keyPair.getPrivateKey();
-        RSAPublicKey publicKey = (RSAPublicKey) keyPair.getPublicKey();
+        KeyPairGenerator keyPairGen = KeyPairGenerator.getInstance("RSA");
+        keyPairGen.initialize(1024);
+        KeyPair keyPair = keyPairGen.generateKeyPair();
+        RSAPrivateKey privateKey = (RSAPrivateKey) keyPair.getPrivate();
+        RSAPublicKey publicKey = (RSAPublicKey) keyPair.getPublic();
         RSAUtil rsaUtil = new RSAUtil(privateKey, publicKey);
         rsaUtil.saveKeyForBase64(privateKeyFile, publicKeyFile);
         return rsaUtil;
@@ -73,9 +72,8 @@ public class RSAUtil {
 
     /** 读取密匙 */
     public static RSAUtil loadKeyForBase64(String privateKeyStr, String publicKeyStr) throws Exception {
-        BASE64Decoder decoder = new BASE64Decoder();
-        byte[] privateKey = decoder.decodeBuffer(privateKeyStr);
-        byte[] publicKey = decoder.decodeBuffer(publicKeyStr);
+        byte[] privateKey = Base64.decodeBase64(privateKeyStr);
+        byte[] publicKey = Base64.decodeBase64(publicKeyStr);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(publicKey);
         RSAPublicKey rsaPublicKey = (RSAPublicKey) keyFactory.generatePublic(keySpec);
@@ -91,8 +89,8 @@ public class RSAUtil {
 
     private static String loadBase64(File file) throws Exception {
         try (BufferedReader br = new BufferedReader(new FileReader(file))) {
-            String readLine = null;
             StringBuilder sb = new StringBuilder();
+            String readLine;
             while ((readLine = br.readLine()) != null) {
                 if (readLine.length() > 0 && readLine.charAt(0) != '-') {
                     sb.append(readLine);
@@ -105,9 +103,8 @@ public class RSAUtil {
     /** 保存密匙 */
     public void saveKeyForBase64(File privateKeyFile, File publicKeyFile) throws Exception {
         if (prikey == null || pubkey == null) return;
-        BASE64Encoder encoder = new BASE64Encoder();
-        saveBase64(encoder.encodeBuffer(prikey.getEncoded()), privateKeyFile);
-        saveBase64(encoder.encodeBuffer(pubkey.getEncoded()), publicKeyFile);
+        saveBase64(Base64.encodeBase64String(prikey.getEncoded()), privateKeyFile);
+        saveBase64(Base64.encodeBase64String(pubkey.getEncoded()), publicKeyFile);
     }
 
     private static void saveBase64(String buffer, File file) throws Exception {
@@ -121,8 +118,9 @@ public class RSAUtil {
     }
 
     private static void base() throws Exception {
-        File privateKeyFile = new File("D:\\jt\\rsa\\privateKeyFile");
-        File publicKeyFile = new File("D:\\jt\\rsa\\publicKeyFile");
+        System.out.println(System.getProperty("java.version"));
+        File privateKeyFile = new File("D:\\qwwuyu\\test\\privateKeyFile");
+        File publicKeyFile = new File("D:\\qwwuyu\\test\\publicKeyFile");
         // RSAUtil rsaUtil = RSAUtil.genRSAKeyPair(privateKeyFile, publicKeyFile);
         RSAUtil rsaUtil = RSAUtil.loadKeyForBase64(privateKeyFile, publicKeyFile);
         String clearText = "阿萨德";
